--- a/pages/15854.html
+++ b/pages/15854.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -309,7 +309,7 @@ margin-left: 0em;
 
 <div id="revision">
     <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>Matrix models are <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>physical models</a> in which the dynamical quantities are square <a class='existingWikiWord' href='/nlab/show/matrix'>matrices</a> (in certain class of matrices, e.g. <a class='existingWikiWord' href='/nlab/show/hermitian+matrix'>hermitian</a>), in other words, a <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian</a>/<a class='existingWikiWord' href='/nlab/show/Hamiltonian'>Hamiltonian</a> depends on matrix quantities and is usually taken at the limit when the size of matrix tends to infinity.</p>
@@ -319,13 +319,27 @@ margin-left: 0em;
 <h2 id='related_entries'>Related entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Fredholm+determinant'>Fredholm determinant</a>, <a class='existingWikiWord' href='/nlab/show/random+matrix'>random matrix theory</a>, <span class='newWikiWord'>determinantal process<a href='/nlab/new/determinantal+process'>?</a></span>, <span class='newWikiWord'>Kontsevich matrix model<a href='/nlab/new/Kontsevich+matrix+model'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/large+N+limit'>large N limit</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fredholm+determinant'>Fredholm determinant</a>, <a class='existingWikiWord' href='/nlab/show/random+matrix'>random matrix theory</a>, <span class='newWikiWord'>determinantal process<a href='/nlab/new/determinantal+process'>?</a></span>, <span class='newWikiWord'>Kontsevich matrix model<a href='/nlab/new/Kontsevich+matrix+model'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/large+N+limit'>large N limit</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/integrable+system'>integrable system</a>, <a class='existingWikiWord' href='/nlab/show/topological+recursion'>topological recursion</a></p>
+</li>
 </ul>
 
 <p>Matrix models that have been argued to capture <a class='existingWikiWord' href='/nlab/show/D-brane'>D-brane</a> dynamics and <a class='existingWikiWord' href='/nlab/show/non-perturbative+effect'>nonperturbative effects</a> in <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> include</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/BFSS+matrix+model'>BFSS matrix model</a>, <a class='existingWikiWord' href='/nlab/show/IKKT+matrix+model'>IKKT matrix model</a>, <a class='existingWikiWord' href='/nlab/show/membrane+matrix+model'>membrane matrix model</a>, <a class='existingWikiWord' href='/nlab/show/K-matrix+model'>K-matrix model</a></li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<p>Discussion of <a class='existingWikiWord' href='/nlab/show/topological+recursion'>topological recursion</a> for matrix models originates with</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Leonid+Chekhov'>Leonid Chekhov</a>, <a class='existingWikiWord' href='/nlab/show/Bertrand+Eynard'>Bertrand Eynard</a>, <a class='existingWikiWord' href='/nlab/show/Nicolas+Orantin'>Nicolas Orantin</a>, <em>Free energy topological expansion for the 2-matrix model</em>, JHEP 0612:053,2006 (<a href='https://arxiv.org/abs/math-ph/0603003'>arXiv:math-ph/0603003</a>)</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/physics'>physics</a></div></p>
@@ -335,14 +349,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May 31, 2017 05:16:30 
+  Revised on October 20, 2017 17:49:59 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.220.184.222)
+  (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/matrix+model/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/matrix+model/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
