--- a/pages/18704.html
+++ b/pages/18704.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      spectral curve in nLab
+      Nicolas Orantin in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      spectral curve
+      Nicolas Orantin
   </h1>
 
 
@@ -308,97 +308,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>Roughly speaking, a <strong>spectral curve</strong> is a locus of zeros of the <a class='existingWikiWord' href='/nlab/show/characteristic+polynomial'>characteristic polynomial</a> of the <a class='existingWikiWord' href='/nlab/show/Lax+equation'>Lax matrix</a> of a classical <a class='existingWikiWord' href='/nlab/show/integrable+system'>integrable system</a>.</p>
-
-<p><a class='existingWikiWord' href='/nlab/show/Nigel+Hitchin'>Hitchin</a> has taken a deeper geometric point of view in terms of the <a class='existingWikiWord' href='/nlab/show/moduli+space'>moduli space</a> of <a class='existingWikiWord' href='/nlab/show/stable+vector+bundle'>stable vector bundles</a> of fixed rank <math class='maruku-mathml' display='inline' id='mathml_c7f662f310f871551a2c3737de2cd5f6883eeaa8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>r</mi></mrow><annotation encoding='application/x-tex'>r</annotation></semantics></math> and degree <math class='maruku-mathml' display='inline' id='mathml_c7f662f310f871551a2c3737de2cd5f6883eeaa8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math> over a fixed projective nonsingular curve <math class='maruku-mathml' display='inline' id='mathml_c7f662f310f871551a2c3737de2cd5f6883eeaa8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>\Sigma</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/genus'>genus</a> <math class='maruku-mathml' display='inline' id='mathml_c7f662f310f871551a2c3737de2cd5f6883eeaa8_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi></mrow><annotation encoding='application/x-tex'>g</annotation></semantics></math>. A point in the <a class='existingWikiWord' href='/nlab/show/cotangent+bundle'>cotangent bundle</a> of this bundle is a stable vector bundle equipped with a 1-form valued endomorphism; to each such datum one associates a spectral curve.</p>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/topological+recursion'>topological recursion</a></li>
+    <ul>
+<li><a href='https://www.math.tecnico.ulisboa.pt/~norantin/research.html'>webpage</a></li>
 </ul>
 
-<h2 id='references'>References</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_abfdafd81b862ea9a60b5da1fab6db88d66ceb37_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Nigel+Hitchin'>N.J. Hitchin</a>, <em>The self-duality equations on a Riemann surface</em>, Proc. London Math. Soc. (3) 55 (1987), no. 1, 59–126, <a href='http://www.ams.org/mathscinet-getitem?mr=887284'>MR887284</a> <a href='http://dx.doi.org/10.1112/plms/s3-55.1.59'>doi</a>; <em>Stable bundles and integrable systems</em>, Duke Math. J. , 54 (1987) pp. 91–114 <a href='http://www.ams.org/mathscinet-getitem?mr=89a:32021'>MR89a:32021</a> <a href='http://dx.doi.org/10.1215/S0012-7094-87-05408-1'>doi</a> <a href='http://projecteuclid.org/euclid.dmj/1077305506'>euclid</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/topological+recursion'>topological recursion</a></p>
 </li>
 
 <li>
-<p>O. Babelon, D. Bernard, M. Talon, <em>Introduction to classical integrable systems</em>, Cambridge Univ. Press 2003.</p>
-</li>
-
-<li>
-<p>Eyal Markman, <em>Spectral curves and integrable systems</em> Compositio Math. <strong>93</strong> no. 3 (1994), p. 255-290, <a href='http://www.numdam.org/item?id=CM_1994__93_3_255_0'>numdam</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Ron+Donagi'>Ron Donagi</a>, Eyal Markman, <em>Spectral covers, algebraically completely integrable, Hamiltonian systems, and moduli of bundles</em>, pp. 1-119 in Integrable systems and quantum groups (expanded CIME lectures, Montecatini Terme, 1993), Lecture Notes in Math. <strong>1620</strong> (1996) <a href='http://arxiv.org/abs/alg-geom/9507017'>arXiv:alg-geom/9507017</a>, <a href='http://www.ams.org/mathscinet-getitem?mr=1397273'>MR97h:14017</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Ron+Donagi'>Ron Donagi</a>, <em>Spectral covers</em>, MSRI series 28, <a href='http://www.msri.org/publications/books/Book28/files/donagi.pdf'>pdf</a></p>
-</li>
-
-<li>
-<p>A. Beauville, <em>Jacobiennes des courbes spectrales et systèmes Hamiltoniens complètement intégrables</em>, Acta Math. <strong>164</strong> (1990), 211-235, <a href='http://www.ams.org/mathscinet-getitem?mr=86c:32030'>MR86c:32030</a>, <a href='http://dx.doi.org/10.1007/BF02392754'>doi</a></p>
-</li>
-
-<li>
-<p>A. Beauville, M. S. Narasimhan, S. Ramanan, <em>Spectral curves and the generalized theta divisor</em>, J. Reine Angew. Math. 398 (1989), 169-179.</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Carlos+Simpson'>Carlos T. Simpson</a>, <em>Higgs bundles and local systems</em>, Publ. Mathématiques de l’IHÉS, 75 (1992), p. 5-95, <a href='http://www.numdam.org/item?id=PMIHES_1992__75__5_0'>numdam</a></p>
-</li>
-
-<li>
-<p>J. C. Hurtubise, <em>Integrable systems and algebraic surfaces</em>, Duke Math. J. <strong>83</strong>:1 (1996), 19-50, <a href='http://projecteuclid.org/euclid.dmj/1077244044'>euclid</a>; erratum Duke Math. J. <strong>84</strong>:3 (1996), 815, <a href='http://projecteuclid.org/euclid.dmj/1077244246'>euclid</a></p>
-</li>
-
-<li>
-<p>Anton Izosimov, <em>Singularities of integrable systems and algebraic curves</em>, <a href='http://arxiv.org/abs/1509.08996'>arxiv/1509.08996</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/random+matrix'>random matrix</a></p>
 </li>
 </ul>
 
-<p>Quantum spectral curve:</p>
-
-<ul>
-<li>
-<p>V. Talalaev, <em>The quantum Gaudin system</em>, Funct. Anal. Appl. <strong>40</strong>, 73–77 (2006) ( <em>Квантовая система Годена</em>, Функц. анализ и его прил. <strong>40</strong>, вып. 1, 2006, с. 86–91, <a href='http://www.mathnet.ru/php/getFT.phtml?jrnid=faa&amp;paperid=25&amp;what=fullt&amp;option_lang=rus'>pdf</a>)</p>
-</li>
-
-<li>
-<p>Д. Талалаев, А. Червов, <em>Уравнение КЗ, G-оперы, квантовая редукция Дринфельда–Соколова и квантовое тождество Гамильтона–Кэли</em>, Zapiski Naučnyh Seminarov POMI <strong>360</strong>, 2008, 246–259, <a href='http://www.mathnet.ru/php/getFT.phtml?jrnid=znsl&amp;paperid=2168&amp;what=fullt&amp;option_lang=rus'>pdf</a>; Engl, transl. in J. Math, Sci. (New York), 2009, 158:6, 904–911, <a href='http://dx.doi.org/10.1007/s10958-009-9415-1'>doi</a></p>
-</li>
-</ul>
-
-<p>
-</p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on October 20, 2017 17:35:57 
+  Created on October 20, 2017 17:34:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/spectral+curve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/spectral+curve/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/spectral+curve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/spectral+curve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Nicolas+Orantin" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/spectral+curve" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Nicolas+Orantin" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/spectral+curve" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Nicolas+Orantin" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/spectral+curve" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Nicolas+Orantin" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
