--- a/pages/2012.html
+++ b/pages/2012.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -950,7 +950,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/spectral+curve'>spectral curve</a>.</p>
+<p><a class='existingWikiWord' href='/nlab/show/spectral+curve'>spectral curve</a>,</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topological+recursion'>topological recursion</a></p>
 </li>
 </ul>
 
@@ -1004,14 +1008,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 10, 2017 00:37:15 
+  Revised on October 20, 2017 17:28:00 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/integrable+system" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/integrable+system/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/integrable+system" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/integrable+system" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/integrable+system" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/integrable+system/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/integrable+system" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/integrable+system" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
