--- a/pages/8682.html
+++ b/pages/8682.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -322,20 +322,27 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Reshetikhin-Turaev+construction'>Reshetikhin-Turaev model</a>, <a class='existingWikiWord' href='/nlab/show/Turaev-Viro+model'>Turaev-Viro model</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topological+recursion'>topological recursion</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Created on October 17, 2012 22:49:04 
+  Revised on October 20, 2017 17:40:28 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.169.65.155)
+  (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/J%C3%B8rgen+Andersen" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/J%C3%B8rgen+Andersen" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/J%C3%B8rgen+Andersen/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/J%C3%B8rgen+Andersen" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/J%C3%B8rgen+Andersen" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
