--- a/pages/11305.html
+++ b/pages/11305.html
@@ -312,18 +312,30 @@ margin-left: 0em;
 <li><a href='http://www.th.physik.uni-bonn.de/people/aklemm/'>webpage</a></li>
 </ul>
 
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_ecef267623e359879c6748b62170596b4d8b1202_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topological+recursion'>topological recursion</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topological+string'>topological string</a></p>
+</li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on March 13, 2014 04:32:20 
+  Revised on October 20, 2017 18:26:36 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.182)
+  (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Albrecht+Klemm" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Albrecht+Klemm" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Albrecht+Klemm/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Albrecht+Klemm" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Albrecht+Klemm" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
