--- a/pages/16935.html
+++ b/pages/16935.html
@@ -312,7 +312,7 @@ margin-left: 0em;
 <li><a href='http://www.unige.ch/math/en/people/marino/'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_54a2d1608d3df7a1730cbdae0d690b6b4ba28396_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_a890b9236292904dbd76e3f4dd4981619d2a5ffa_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -321,6 +321,14 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/instanton+in+QCD'>instanton in QCD</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topological+recursion'>topological recursion</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topological+string'>topological string</a></p>
 </li>
 </ul>
 
@@ -331,14 +339,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November 12, 2015 17:49:26 
+  Revised on October 20, 2017 18:28:09 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.209.180)
+  (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Marcos+Mari%C3%B1o" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Marcos+Mari%C3%B1o" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Marcos+Mari%C3%B1o/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Marcos+Mari%C3%B1o" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Marcos+Mari%C3%B1o" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
