--- a/pages/18708.html
+++ b/pages/18708.html
@@ -312,7 +312,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Complexity theory is an area of research in computer science that aims to determine the amount of resources (time and space usually) that an algorithm needs to decide a query. Descriptive complexity is a branch of complexity theory that uses sentences in finite model theory to describe queries. It turns out that the languages of these sentences directly correspond to known complexity classes.</p>
+<p><a class='existingWikiWord' href='/nlab/show/complexity+theory'>Complexity theory</a> is an area of research in computer science that aims to determine the amount of resources (time and space usually) that an algorithm needs to decide a query. <strong>Descriptive complexity</strong> is a branch of complexity theory that uses sentences in finite model theory to describe queries. It turns out that the languages of these sentences directly correspond to known complexity classes.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -334,14 +334,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on October 20, 2017 19:02:04 
-  by <span class="newWikiWord">Larry B<a href="/nlab/new/LarryB">?</a></span>
-  (2001:4998:effd:600:f081:3063:16be:4da0)
+  Revised on October 21, 2017 05:41:10 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (217.39.117.243)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/descriptive+complexity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/descriptive+complexity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/descriptive+complexity/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/descriptive+complexity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/descriptive+complexity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
