--- a/pages/15373.html
+++ b/pages/15373.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -309,10 +309,10 @@ margin-left: 0em;
 
 <div id="revision">
     <ul>
-<li><a href='http://aix1.uottawa.ca/~rlucyshy/'>webpage</a></li>
+<li><a href='http://lucyshyn-wright.ca'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_5e2cb9aa0dd608c8b16b9dd8c0dba2af00d97d44_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_b3a6f63a3ed82a15d9ad1bb13c623d3ce1ae35e5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/idempotent+monad'>idempotent monad</a></li>
@@ -322,14 +322,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on July 10, 2014 19:02:54 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.130.36)
+  Revised on October 22, 2017 10:56:45 
+  by <a class="existingWikiWord" href="/nlab/show/Rory+Lucyshyn-Wright">Rory Lucyshyn-Wright</a>
+  (76.11.100.119)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Rory+Lucyshyn-Wright" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Rory+Lucyshyn-Wright" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Rory+Lucyshyn-Wright/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Rory+Lucyshyn-Wright" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Rory+Lucyshyn-Wright" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
