--- a/pages/18702.html
+++ b/pages/18702.html
@@ -354,6 +354,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Bertrand+Eynard'>Bertrand Eynard</a>, <em>A short overview of the “Topological recursion”</em> (<a href='https://arxiv.org/abs/1412.3286'>arXiv:1412.3286</a>)</p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Nicolas+Orantin'>Nicolas Orantin</a>, <em>Topological Recursion</em>, eight-part lecture series, 2017. <a href='https://m.youtube.com/watch?v=qvBfeVLPZpE'>youtube</a> (1/8)</p>
+</li>
 </ul>
 
 <p>The Kontsevich-Soibelman approach (and much more) is reviewed in</p>
@@ -388,20 +392,19 @@ margin-left: 0em;
 
 <p>During the Institut Henri Poincaré’s thematic trimester “<a href='http://combi17.math.cnrs.fr'>Combinatorics and interactions</a>”, Nicolas Orantin delivered a series of lectures on topological recursion, which are available online:</p>
 
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Nicolas+Orantin'>Nicolas Orantin</a>, “Topological Recursion”, eight-part lecture series, 2017. <a href='https://m.youtube.com/watch?v=qvBfeVLPZpE'>youtube</a> (1/8)</li>
-</ul>
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on October 20, 2017 19:36:01 
-  by <a class="existingWikiWord" href="/nlab/show/Noam+Zeilberger">Noam Zeilberger</a>
-  (92.40.248.63)
+  Revised on October 22, 2017 10:47:06 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/topological+recursion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/topological+recursion/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/topological+recursion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/topological+recursion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/topological+recursion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/topological+recursion/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/topological+recursion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/topological+recursion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
